Bug 157134 - Jumping to linked image in a11y doesn't work in all cases
Summary: Jumping to linked image in a11y doesn't work in all cases
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Samuel Mehrbrodt
URL:
Whiteboard: target:24.2.0
Keywords:
Depends on:
Blocks: Accessibility-Check
  Show dependency treegraph
 
Reported: 2023-09-07 11:27 UTC by Samuel Mehrbrodt
Modified: 2023-09-08 12:29 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Bugdoc (100.58 KB, application/vnd.oasis.opendocument.text)
2023-09-07 11:27 UTC, Samuel Mehrbrodt
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Samuel Mehrbrodt 2023-09-07 11:27:00 UTC
Created attachment 189412 [details]
Bugdoc

1. Open Bugdoc
2. Go to a11y sidebar
3. Click on "Image3"
4. Click on "Shape 1 renamed"

Expected: "Shape 1 renamed" is selected
Actual: Nothing is selected

Selecting "Shape 1 renamed" works when no object was selected beforehand.
Comment 1 Commit Notification 2023-09-08 12:08:10 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2768ada1943a4dfb7ac2fc080656e151dd55efb8

tdf#157134 Fix selecting shape when image was selected before

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.