tdf#157134 Fix selecting shape when image was selected before

Change-Id: Ia45385aa5f76390f17fbcb14f7872ba0a0d9e14f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/156665
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>